--- a/html/chat.html
+++ b/html/chat.html
@@ -19,8 +19,8 @@
               </div>
               <span class="settings-tray--right">
                 <i class="material-icons" id="refreshChatWindow">cached</i>
-             <!--   <i class="material-icons" id="refer">add</i> -->
-             <!--   <i class="material-icons">menu</i> -->
+            <!--    <i class="material-icons" id="refer">add</i> 
+                <i class="material-icons" id="menu">menu</i> -->
                <i class="material-icons" id="depart">exit_to_app</i>
               </span>
             </div>
